# portable-vocal-remover

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
libflac/: Cargo.toml
libflac-sys/: Cargo.toml  build.rs
libflac-sys/src/: lib.rs
libflac/src/: error.rs  lib.rs
models/: UVR_MDXNET_Main.onnx
pvr/: Cargo.toml
pvr-core/: Cargo.toml
pvr-core/src/: config.rs  lib.rs
pvr-core/src/model/: mod.rs
pvr-core/src/model/mdx/: config.rs  mod.rs
pvr-core/src/model/vr/: layers.rs  mod.rs  utils.rs
pvr/src/: cli.rs  main.rs  setup.rs  util.rs
pvr/src/model/: mdx.rs
pvr/src/model/mdx/: config.rs  mod.rs  preset.rs
src/: cli.rs  main.rs  setup.rs  util.rs  utils.rs
src/model/: mdx.rs  mod.rs  stft.rs
src/model/mdxnet/: mod.rs
src/model/mdxnet/stft/: hann.rs  mod.rs
