[package]
name = "portable-vocal-remover"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.79"
ndarray = "0.15.6"
realfft = "3.3.0"
# Audio resample
# rubato = "0.14.1"

# logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["parking_lot"] }

# Audio decode
[dependencies.symphonia]
version = "0.5.3"
default-features = false
features = ["wav", "flac", "mp3"]

[dependencies.ort]
version = "2.0.0-alpha.4"
default-features = false
features = ["ndarray", "download-binaries", "copy-dylibs", "tensorrt", "cuda"]
